@startuml
'https://plantuml.com/class-diagram

package "<<aggregate>> Customer Manager" {
    entity CustomerManager <<entity>> <<root>>  {}
}
    package "<<aggregate>> Candidate" {
    entity Candidate <<entity>>  <<root>>{}
}
package "<<aggregate>> Application" {
    entity Application <<entity>><<root>>  {}
    class Email <<(V,#FF8B40) value object>> {}
    class ApplicationStatus <<(V,#FF8B40) value object>> {}
    class CandidateName <<(V,#FF8B40) value object>> {}
    class PhoneNumber <<(V,#FF8B40) value object>> {}
    class Interview <<(V,#FF8B40) value object>>   {}
    class InterviewAnswer <<(V,#FF8B40) value object>>   {}
    class InterviewResult <<(V,#FF8B40) value object>>   {}
    class Justification <<(V,#FF8B40) value object>>   {}
    class InterviewGrade <<(V,#FF8B40) value object>>   {}
    class RequirementAnswer <<(V,#FF8B40) value object>>   {}
    class RequirementResult <<(V,#FF8B40) value object>>   {}
    class InterviewAnswer <<(V,#FF8B40) value object>>   {}
    class Schedule <<(V,#FF8B40) value object>> {}
     class File <<(V,#FF8B40) value object>> {}
}

CustomerManager --> "1..*" Candidate : manages

Candidate --> "1..*" Application : submits

Application ---> "0..1" Interview : includes
Application --> "1" RequirementAnswer : includes
Application ---> "1" RequirementResult : includes
Application ---> "1" Email: includes
Application --> "1" CandidateName: includes
Application ---> "1" PhoneNumber: includes
Application ---> "1..*" File : describes <
Application --> "1" ApplicationStatus : categorizes <


Interview ---> "1" InterviewAnswer: described in
Interview ---> "1" InterviewResult: classifies <
InterviewResult -> "1" InterviewGrade: grades <
InterviewResult --> "1" Justification: justifies <
Interview --> "1" Schedule : follows a
@enduml